2005-11-24  Frederic Ruaudel <grumz@grumz.net> 

	* plugin/nautilus-actions-test.c (nautilus_actions_test_validate):
	Fix the test of the '*' pattern that made n-a matches everything when
	using multiple pattern syntax.

	* config/config_newaction.xml.in:
	* config/Makefile.am: Remove the old config file installation

	* autogen.sh:
	* configure.in:
	* config/Makefile.am: Add support for GConf schema installation

	* config/config_newaction.schemas.in.in: Set the uuid to a non-random
	string so it can be recognizable.

2005-11-23  Frederic Ruaudel <grumz@grumz.net> 

	* Makefile.am:
	* configure.in: Add --enable-commandline-tool option to configure
	to make nautilus-actions compile on systems with Glib 2.4 like FC3.
	Glib 2.4 doesn't implement Commandline parser API.

2005-11-18  Frederic Ruaudel <grumz@grumz.net> 

	* po/POTFILES.in: Add nact-import-export.c

	* po/nautilus-actions.pot:
	* po/*.po: Update i18n strings.

	* nact/Makefile.am:
	* nact/nact-utils.h:
	* nact/nact.c:
	* nact/nact.h:
	* nact/nautilus-actions-config.glade:
	* nact/nact-import-export.c:
	* nact/nact-import-export.h: Implement the import/export
	of n-a configurations in nact.

	* nact/nact-prefs.c:
	* nact/nact-prefs.h: Add preferences for the new import/export
	dialog in nact.

	* libnautilus-actions/nautilus-actions-config-schema-reader.c:
	Fix the bug from the first implementation

	* libnautilus-actions/nautilus-actions-config.c: Remove some
	debug messages.

2005-11-17  Frederic Ruaudel <grumz@grumz.net> 

	* libnautilus-actions/nautilus-actions-config-schema.c:
	* libnautilus-actions/nautilus-actions-config-schema.h:
	* libnautilus-actions/nautilus-actions-config-schema-writer.c:
	* libnautilus-actions/nautilus-actions-config-schema-writer.h:
	* utils/nautilus-actions-convert.c:
	* utils/nautilus-actions-new-config.c: Rename NautilusActionsConfigSchema
	GObject into NautilusActionsConfigSchemaWriter

	* libnautilus-actions/Makefile.am: